# maxim

./: .gitignore  CMakeLists.txt  README.md  info.md  main.c  nrf52dk_nrf52832.dts  nrf52dk_nrf52832.overlay  prj.conf  screenlog.0
build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
build_1/modules/cmsis/: cmake_install.cmake
build_1/modules/hal_nordic/: cmake_install.cmake
build_1/modules/mcuboot/: cmake_install.cmake
build_1/modules/nrf/: cmake_install.cmake
build_1/modules/nrfxlib/: cmake_install.cmake
build_1/modules/tinycrypt/: cmake_install.cmake
build_1/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
build_1/zephyr/arch/: cmake_install.cmake
build_1/zephyr/drivers/: cmake_install.cmake
build_1/zephyr/kconfig/: sources.txt
build_1/zephyr/lib/: cmake_install.cmake
build_2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build_2/zephyr/: .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr_pre0.elf
build_2/zephyr/kconfig/: sources.txt
includes/: MAX30003.h
src/: copy.c  main.c
src/bluetooth/: BLE.c  BLE.h
(+78 files in other folders)
